--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -1,24 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.savoirtech</groupId>
-        <artifactId>mircoservices</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-    </parent>
+  <parent>
+    <groupId>com.savoirtech</groupId>
+    <artifactId>mircoservices</artifactId>
+    <version>1.0.0</version>
+  </parent>
 
-    <artifactId>domain</artifactId>
-    <packaging>bundle</packaging>
+  <artifactId>domain</artifactId>
+  <packaging>bundle</packaging>
 
-    <name>FSTO :: Common Domain Library</name>
-    <description>Common Library</description>
+  <name>FSTO :: Common Domain Library</name>
+  <description>Common Library</description>
 
-    <build>
+  <dependencies>
+    <dependency>
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
+      <version>2.3.3</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-impl</artifactId>
+      <version>2.3.3</version>
+      <scope>runtime</scope>
+    </dependency>
+  </dependencies>
+
+  <build>
     <defaultGoal>install</defaultGoal>
 
     <plugins>
@@ -26,7 +39,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
-        <version>2.6</version>
+        <version>3.2.0</version>
         <configuration>
           <encoding>UTF-8</encoding>
         </configuration>
@@ -36,7 +49,7 @@
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
-        <version>2.4.0</version>
+        <version>4.2.1</version>
         <extensions>true</extensions>
         <configuration>
           <instructions>
@@ -48,6 +61,8 @@
 
     </plugins>
 
-    </build>
+  </build>
 
 </project>
+
+
