--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
@@ -9,22 +8,20 @@
   <groupId>com.savoirtech</groupId>
   <artifactId>mircoservices</artifactId>
   <packaging>pom</packaging>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <name>FSTO :: Parent Pom</name>
 
-  <prerequisites>
-    <maven>3.2.2</maven>
-  </prerequisites>
-
   <properties>
-     <karaf.version>4.0.2</karaf.version>
-     <cxf.version>3.0.4</cxf.version>
-     <camel.version>2.15.2</camel.version>
-     <activemq.version>5.12.1</activemq.version>
-     <jettison.version>1.3.7</jettison.version>
-     <slf4j.version>1.7.7</slf4j.version>
-     <pax-exam.version>4.5.0</pax-exam.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+    <karaf.version>4.3.2</karaf.version>
+    <cxf.version>3.4.4</cxf.version>
+    <camel.version>2.25.4</camel.version>
+    <activemq.version>5.15.15</activemq.version>
+    <jettison.version>1.4.1</jettison.version>
+    <slf4j.version>1.7.32</slf4j.version>
+    <pax-exam.version>4.13.4</pax-exam.version>
   </properties>
 
   <modules>
@@ -36,17 +33,17 @@
   </modules>
 
   <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.3</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-        </plugins>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <source>11</source>
+          <target>11</target>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 
 </project>
